5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1573_2897.log
== SUBMITION (2019-03-13 14:20:38) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(2))

# Impressao do dobro do numero
print(4)
-- EXECUTION TIME:
0.251365
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
24
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
24
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:21:07) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(2))

# Impressao do dobro do numero
print(2*2)
-- EXECUTION TIME:
0.155574
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
24
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
24
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:21:33) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(2))

# Impressao do dobro do numero
print()
-- EXECUTION TIME:
0.182989
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:21:49) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(2))

# Impressao do dobro do numero
print(int(input(2)))
-- EXECUTION TIME:
0.175985
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/2897/main.py", line 7, in <module>
    print(int(input(2)))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:21:57) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(2))

# Impressao do dobro do numero
print(int(input(2))
-- EXECUTION TIME:
0.144481
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 8
    
                       ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:22:23) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(2))

# Impressao do dobro do numero
print("4")
-- EXECUTION TIME:
0.134314
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
24
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
24
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:22:55) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(2))

# Impressao do dobro do numero
print("2*2")
-- EXECUTION TIME:
0.171389
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22*2
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
22*2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:23:59) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("2"))

# Impressao do dobro do numero
print("2*2")
-- EXECUTION TIME:
0.19088
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2*2
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
2*2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:24:20) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(2))

# Impressao do dobro do numero
print(4)
-- OUTPUT:
24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:24:28) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(2))

# Impressao do dobro do numero
print(4)
-- OUTPUT:
24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:25:50) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(2))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.207706
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
22468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
2888
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:26:03) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("2"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.177616
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:49:00) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("2"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.166907
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:52:03) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("2"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.150375
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 20:17:34) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("3"))

# Impressao do dobro do numero
print(num*3)
-- EXECUTION TIME:
0.152116
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
3702
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
1332
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 20:17:52) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("3"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.101128
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
